# homeser-backend-drf

./: .env.example  .gitignore  .vulture_whitelist.py  LICENSE  README.md  check_reviews.py  conftest.py  demo_steps.txt  manage.py  populate_demo_data.py  progress.txt  pyproject.toml  pytest.ini  requirements.txt  run_local.sh  setup.cfg  test_db_connection.py  test_env.py  test_env_vars.py  test_postgres_operations.py  test_supabase_connection.py  vercel.json
accounts/: admin.py  authentication.py  models.py  permissions.py  tests.py  validators.py
accounts/migrations/: 0001_initial.py  0002_businesscustomer_customerbillingaddress_and_more.py  0003_alter_customerservicehistory_options_and_more.py
api/: __init__.py  admin.py  consumers.py  drf_extensions_views.py  filters.py  middleware.py  models.py  pagination.py  routing.py  schema.py  serializers.py  smart_prefetch.py  sslcommerz.py  tasks.py  tests.py  tests_auth.py  tests_permissions.py  throttling.py  unified_base_views.py  urls.py  validation_utils.py  views.py
api/management/commands/: test_contract_compatibility.py  validate_api_contracts.py  validate_contracts.py
api/middleware/: error_handler.py
api/permissions/: __init__.py
api/serializers/: __init__.py  email_verification.py
api/services/: __init__.py  abstract_service.py  admin_service.py  base_service.py  cart_service.py  category_service.py  event_observers.py  order_processing_template.py  order_service.py  payment_service.py  payment_strategies.py  permission_service.py  review_service.py  service_factory.py  service_service.py  user_service.py
api/utils/: __init__.py  analytics_engine.py  auth_utils.py  cache_manager.py  permissions.py  websocket_utils.py
api/views/: __init__.py  analytics.py  auth.py  cart.py  category.py  checkout_enhanced.py  common_view_base.py  config.py  contracts.py  email_verification.py  error_analytics.py  favorites.py  order.py  order_actions.py  password_reset_views.py  payment.py  provider_analytics.py  review.py  search.py  service.py  service_actions.py  service_provider.py  settings.py  user.py  user_preferences.py  user_stats.py
homeser/: asgi.py  base_models.py  settings.py  urls.py  views.py  wsgi.py
models/: __init__.py
orders/: admin.py  models.py  models.py.backup  tests.py
orders/migrations/: 0001_initial.py  0002_add_unit_price_field.py  0003_make_price_nullable.py  0004_expressorder_scheduledorder_standardorder_and_more.py  0005_remove_order_orders_orde_status_25e057_idx_and_more.py
payments/: __init__.py  admin.py  models.py  serializers.py  tests.py
payments/migrations/: 0001_initial.py  0002_sslcommerzpayment_stripepayment_and_more.py  0003_remove_payment_payments_pa_created_b8a300_idx_and_more.py  0004_remove_stripepayment_order_delete_sslcommerzpayment_and_more.py
scripts/: resume.sh  save_snapshot.sh
services/: admin.py  favorites.py  models.py  signals.py  tests.py  validators.py
services/management/commands/: clear_service_cache.py  load_sample_data.py  populate_rating_aggregations.py  upload_service_images.py
services/migrations/: 0001_initial.py  0002_basicservice_premiumservice_specializedservice_and_more.py  0003_alter_review_options_and_more.py  0004_add_owner_field_to_service.py  0005_make_owner_field_non_null.py
staticfiles/: staticfiles.json
templates/emails/: account_verification.html  base.html  order_confirmation.html  password_reset.html  payment_confirmation.html  review_notification.html  welcome.html
utils/: __init__.py  advanced_search_service.py  apps.py  cache_manager.py  cache_utils.py  caching_strategy.py  common_imports.py  error_tracking_middleware.py  models.py  populate_advanced_structures.py  redis_bloom_utils.py  response_utils.py  review_analytics.py  sentiment_analysis.py  signals.py  tests.py  usage_metrics.py  validation_package.py  validation_utils.py
utils/advanced_data_structures/: __init__.py  bloom_filter.py  hash_table.py  segment_tree.py  trie.py
utils/benchmarking/: api_benchmark.py  benchmark_report.py  cache_benchmark.py  database_benchmark.py
utils/email/: __init__.py  email_service.py  verify_email.py
utils/management/commands/: analyze_reviews.py  demo_order_fsm.py  erase_db.py  init_search_analytics.py  populate_advanced_structures.py  run_benchmarks.py  test_email.py  update_search_structures.py  warm_caches.py
utils/middleware/: cache_middleware.py
utils/migrations/: 0001_initial.py  0002_delete_emailqueue_delete_emailtracking.py  0003_emailtracking_emailqueue.py  __init__.py
utils/tests/: __init__.py
