[project]
name = "homeser-backend"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "cloudinary==1.44.1",
    "dj-database-url==3.0.1",
    "django==5.2.7",
    "django-cachalot==2.8.0",
    "django-cache-machine==1.2.0",
    "django-cloudinary-storage==0.3.0",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-fsm-2==4.0.0",
    "django-guardian==3.2.0",
    "django-lifecycle==1.2.4",
    "django-model-utils==5.0.0",
    "django-ratelimit==4.1.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "django-filter==25.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-extensions==0.8.0",
    "drf-spectacular==0.27.2",
    "drf-writable-nested==0.7.2",
    "gunicorn==23.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.11",
    "pyjwt==2.10.1",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.4.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "setuptools==80.9.0",
    "sqlparse==0.5.3",
    "sslcommerz-python-api==1.0.1",
    "textblob==0.19.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "whitenoise==6.11.0",
    "pydantic==2.11.9",
    "django-bulk-sync==3.3.0",
    "temporalio==1.18.0",
    "opentelemetry-instrumentation-django==0.58b0",
    "sentry-sdk==2.41.0",

    "certifi==2025.10.5",
    "idna==3.11",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "importlib-metadata==8.7.0",
    "inflection==0.5.1",
    "joblib==1.5.2",
    "nexus-rpc==1.1.0",
    "nltk==3.9.1",
    "opentelemetry-api==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-wsgi==0.58b0",
    "opentelemetry-semantic-conventions==0.58b0",
    "opentelemetry-util-http==0.58b0",
    "protobuf==6.32.1",
    "pydantic-core==2.33.2",
    "regex==2025.9.18",
    "six==1.17.0",
    "tqdm==4.67.1",
    "types-protobuf==6.32.1.20250918",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "wrapt==1.11.2",
    "zipp==3.23.0",

    "pusher>=3.3.3",
]

[project.optional-dependencies]
dev = [
    "astroid==2.3.3",
    "autoflake>=2.3.1",
    "bandit>=1.8.6",
    "hammett>=0.8.0",
    "isort==4.3.21",
    "mccabe==0.6.1",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "radon>=6.0.1",
    "ruff>=0.12.12",
    "setuptools>=80.9.0",
    "vulture>=2.14",
    "wrapt==1.11.2",
    "factory-boy>=3.3.3",
]

[tool.hammett]
plugins = [
    "pytest_django",
]
django_settings = "homeser.settings"
modules = ["api"]
source_location = "."

[tool.uv]
package = false
