[project]
name = "homeser-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7,<6.0.0",
    "djangorestframework>=3.16.1,<4.0.0",
    "django-cors-headers>=4.9.0,<5.0.0",
    "python-decouple>=3.8,<4.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.32.5,<3.0.0",
    "uritemplate>=4.2.0,<5.0.0",
    "whitenoise>=6.11.0,<7.0.0",
    "djangorestframework-simplejwt>=5.5.1,<6.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "django-guardian>=3.2.0,<4.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "dj-database-url>=3.0.1,<4.0.0",
    "django-cachalot>=2.8.0,<3.0.0",
    "django-redis>=6.0.0,<7.0.0",
    "redis>=6.4.0,<7.0.0",
    "cloudinary>=1.44.1,<2.0.0",
    "django-cloudinary-storage>=0.3.0,<1.0.0",
    "pillow>=11.3.0,<12.0.0",
    "drf-extensions>=0.8.0,<1.0.0",
    "drf-spectacular>=0.27.2,<1.0.0",
    "django-filter>=25.1,<26.0.0",
    "django-fsm-2>=4.0.0,<5.0.0",
    "django-lifecycle>=1.2.4,<2.0.0",
    "django-model-utils>=5.0.0,<6.0.0",
    "jsonschema>=4.25.1,<5.0.0",
    "pydantic>=2.11.9,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "textblob>=0.19.0,<1.0.0",
    "sslcommerz-python-api>=1.0.1,<2.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "pusher>=3.3.3,<4.0.0",
    "sentry-sdk>=2.41.0,<3.0.0",
    "django-ratelimit>=4.1.0,<5.0.0",
]
[tool.hammett]
plugins = [
    "pytest_django",
]
django_settings = "homeser.settings"
modules = ["api"]
source_location = "."

[tool.uv]
package = false
